16.0/kustomize/odoo/odoo-16-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: odoo
  name: odoo16
  namespace: odoo-16
spec:
  rules:
  - host: dev2.odoo-shell.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odoo-service
            port:
              number: 8069
      - path: /longpolling
        pathType: Prefix
        backend:
          service:
            name: odoo-service
            port:
              number: 8072
  tls:
  - hosts:
    - dev2.odoo-shell.dev
    secretName: dev2-odoo-shell-dev-tls
